--- a/static/styles.css
+++ b/static/styles.css
@@ -243,3 +243,15 @@ img {
   width: 100%;
   resize: none;
 }
+
+.glow-button {
+  background-color: #1f1f1f;
+	margin-top: 10px;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
